fix: fixed user card breaking on mobile due to long names

--- a/src/styles/components/userCard.module.scss
+++ b/src/styles/components/userCard.module.scss
@@ -14,7 +14,7 @@
     border-radius: 50%;
   }
 
-  h2  { margin: 0.5rem 0; }
+  h2  { font-size: 1.2em; margin: 0.5rem 0; word-break: break-word; }
 
   .flexBottom {
     margin-top: auto;
