--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -161,12 +161,12 @@ a {
 [data-box="grid"] {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, minmax(0, 1fr));
   gap: 15px;
   list-style: none;
 
   &[data-col="6"] {
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 }
 
@@ -175,17 +175,17 @@ a {
     grid-template-columns: 1fr 1fr;
 
     &[data-col="6"] {
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
 }
 
 @media only screen and (max-width: 600px) {
   [data-box="grid"] {
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 1fr);
 
     &[data-col="6"] {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
 }
